# picow_curtain_motor

./: .gitignore  CMakeLists.txt  README.md  config.schema.json  docker-compose.yml  main.cpp  package-lock.json  package.json  tsconfig.json
firmware/: main.py
src/: config.ts  index.ts
